--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "SFML"]
-    path = third_party/SFML
-    url = https://github.com/SFML/SFML.git
-[submodule "glm"]
-    path = third_party/glm
-    url = https://github.com/g-truc/glm.git
-[submodule "glew"]
-    path = third_party/glew
-    url = https://github.com/nigels-com/glew.git
+[submodule "third_party/SFML"]
+	path = third_party/SFML
+	url = https://github.com/SFML/SFML.git
+[submodule "third_party/glew-cmake"]
+	path = third_party/glew-cmake
+	url = https://github.com/Perlmint/glew-cmake.git
+[submodule "third_party/glm"]
+	path = third_party/glm
+	url = https://github.com/g-truc/glm.git
